kubernetes/reddit/dashboard-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  labels:
    app: kubernetes-dashboard
  namespace: kube-system
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: kubernetes-dashboard

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
