kubernetes/reddit/zipkin-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app: reddit
    component: zipkin
spec:
  ports:
    - port: 9411
      protocol: TCP
      targetPort: 9411
  selector:
    app: reddit
    component: zipkin
